--- a/frontend/public/index.css
+++ b/frontend/public/index.css
@@ -1,78 +1,205 @@
-  body{
-    padding: 50px;
-    font-family: 'Roboto', sans-serif;
-    background-color: #F5F5F5;
-  }
-  /*Sign In Form*/
-  .signin{
-    position: relative;
-    height: 700px;
-    width: 500px;
-    margin: auto;
-    box-shadow: 0px 30px 125px -5px #000;}
-  /*Background Img*/
-  .back-img{
-    position: relative;
-    width: 100%;
-    height: 250px;
-    background: url('https://www.omnihotels.com/-/media/images/hotels/nycber/destinations/nyc-aerial-skyline.jpg?h=660&la=en&w=1170')no-repeat center center;
-  background-size: cover;
-  }
-  .layer {
-      background-color: rgba(33,150,243,0.5);
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-  }
-  .active{
-    padding-left: 25px;
-    color: #fff;
-  }
-  .nonactive {
-    color: rgba(255, 255, 255, 0.6);
-  }
-  .sign-in-text{
-    top: 175px;
-    position: absolute;
-    z-index: 1;
-  }
-  h2 {
-    padding-left: 15px;
-    font-size: 25px;
-    text-transform: uppercase;
-    display: inline-block;
-    font-weight: 300;
-  }
-  .point{
-    position: absolute;
-    z-index: 1;
-    color: #fff;
-    top: 235px;
-    padding-left: 50px;
-    font-size: 20px;
-  }
+html {
+  height: 100%;
+}
+body {
+  margin:0;
+  padding:0;
+  font-family: sans-serif;
+  background: linear-gradient(#141e30, #243b55);
+}
 
-  /*form-section*/
-  .form-section{
-    padding: 70px 90px 70px 90px;
+.login-box {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 400px;
+  padding: 40px;
+  transform: translate(-50%, -50%);
+  background: rgba(0,0,0,.5);
+  box-sizing: border-box;
+  box-shadow: 0 15px 25px rgba(0,0,0,.6);
+  border-radius: 10px;
+}
+
+.login-box h2 {
+  margin: 0 0 30px;
+  padding: 0;
+  color: #fff;
+  text-align: center;
+}
+
+.login-box .user-box {
+  position: relative;
+}
+
+.login-box .user-box input {
+  width: 100%;
+  padding: 10px 0;
+  font-size: 16px;
+  color: #fff;
+  margin-bottom: 30px;
+  border: none;
+  border-bottom: 1px solid #fff;
+  outline: none;
+  background: transparent;
+}
+.login-box .user-box label {
+  position: absolute;
+  top:0;
+  left: 0;
+  padding: 10px 0;
+  font-size: 16px;
+  color: #fff;
+  pointer-events: none;
+  transition: .5s;
+}
+
+.login-box .user-box input:focus ~ label,
+.login-box .user-box input:valid ~ label {
+  top: -20px;
+  left: 0;
+  color: #03e9f4;
+  font-size: 12px;
+}
+
+.text{
+  position: relative;
+  display: inline-block;
+  padding: 10px 20px;
+  color: #03e9f4;
+  font-size: 16px;
+  text-decoration: none;
+  text-transform: uppercase;
+  overflow: hidden;
+  transition: .5s;
+  margin-top: 40px;
+  letter-spacing: 4px
+}
+
+.mini-btn{
+  position: relative;
+  display: inline-block;
+  /* padding: 10px; */
+  color: #03e9f4;
+  font-size: 16px;
+  text-decoration: none;
+  text-transform: uppercase;
+  overflow: hidden;
+  transition: .5s;
+  /* margin-top: 40px; */
+  letter-spacing: 4px
+}
+
+
+.font-size{
+  font-size: xx-small ;
+}
+a{
+  text-decoration: none;
+}
+a::before{
+  text-decoration: none;
+}
+a::before{
+  text-decoration: none;
+}
+a:hover{
+  text-decoration: none;
+}
+a:visited{
+  text-decoration: none ;
+}
+
+.submit:hover {
+  background: #03e9f4;
+  color: #fff;
+  border-radius: 5px;
+  box-shadow: 0 0 5px #03e9f4,
+              0 0 25px #03e9f4,
+              0 0 50px #03e9f4,
+              0 0 10px #03e9f4;
+}
+
+.pointer-event{
+  pointer-events:fill;
+}
+
+.login-box a span {
+  position: absolute;
+  display: block;
+}
+
+.login-box a span:nth-child(1) {
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(90deg, transparent, #03e9f4);
+  animation: btn-anim1 1s linear infinite;
+}
+
+@keyframes btn-anim1 {
+  0% {
+    left: -100%;
   }
-  .keep-text{
-    font-size: 15px;
-    color: #BDBDBD;
+  50%,100% {
+    left: 100%;
   }
-  .forgot-text{
-    font-size: 12px;
-    color: #BDBDBD;
-    text-align: right;
+}
+
+.login-box a span:nth-child(2) {
+  top: -100%;
+  right: 0;
+  width: 2px;
+  height: 100%;
+  background: linear-gradient(180deg, transparent, #03e9f4);
+  animation: btn-anim2 1s linear infinite;
+  animation-delay: .25s
+}
+
+@keyframes btn-anim2 {
+  0% {
+    top: -100%;
   }
-  /*sign-in-btn*/
-  .sign-in-btn{
-    width: 100%;
-    height: 75px;
-    position:absolute;
-    bottom:0;
-    border-radius: 0px;
-    background-color: rgba(63, 78, 191, 1);
+  50%,100% {
+    top: 100%;
   }
+}
+
+.login-box a span:nth-child(3) {
+  bottom: 0;
+  right: -100%;
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(270deg, transparent, #03e9f4);
+  animation: btn-anim3 1s linear infinite;
+  animation-delay: .5s
+}
+
+@keyframes btn-anim3 {
+  0% {
+    right: -100%;
+  }
+  50%,100% {
+    right: 100%;
+  }
+}
+
+.login-box a span:nth-child(4) {
+  bottom: -100%;
+  left: 0;
+  width: 2px;
+  height: 100%;
+  background: linear-gradient(360deg, transparent, #03e9f4);
+  animation: btn-anim4 1s linear infinite;
+  animation-delay: .75s
+}
+
+@keyframes btn-anim4 {
+  0% {
+    bottom: -100%;
+  }
+  50%,100% {
+    bottom: 100%;
+  }
+}
